erDiagram
    USERS {
        int user_id PK
        string user_name
        string user_email
        string user_password
        string user_dni
        string user_role_id
        boolean user_state
        timestamp created_at
        timestamp updated_at
    }

    ROLES {
        int role_id PK
        varchar role_name UK
        timestamp created_at
        timestamp updated_at
    }

    GARAGES {
        int garage_id PK
        int owner_id FK
        int location_id
        decimal garage_price
        varchar garage_description
        boolean garage_covered
        boolean garage_has_cameras
        varchar garage_restrictions
        boolean garage_state
        timestamp created_at
        timestamp updated_at
    }

    GARAGE_PHOTOS {
        int garage_photo_id PK
        int garage_id FK
        varchar garage_url
        timestamp created_at
        timestamp updated_at
    }

    BOOKING_REQUESTS {
        int request_id PK
        int garage_id FK
        int renter_id FK
        datetime start_dt
        datetime end_dt
        enum status "pending, accepted, rejected"
        timestamp created_at
        timestamp updated_at
    }

    BOOKINGS {
        int booking_id PK
        int request_id FK
        int garage_id FK
        int renter_id FK
        datetime start_dt
        datetime end_dt
        enum status "unpaid, paid, completed, expired, cancelled"
        decimal total
        timestamp created_at
        timestamp updated_at
    }

    PAYMENTS {
        int payment_id PK
        int booking_id FK
        decimal amount
        enum method_payment
        varchar status
        varchar boucher
        datetime payment_date
    }

    REVIEWS {
        int id PK
        int booking_id FK
        int rating
        text comment
        timestamp created_at
        timestamp updated_at
    }

    DISTRICTS {
        int district_id PK
        text district_name
        timestamp created_at
        timestamp updated_at
    }
    
    LOCATIONS {
        int location_id PK
        text location_adress
        decimal location_latitude
        decimal location_longitude
        int district_id FK
    }

    USERS ||--o{ GARAGES : "publica"
    USERS ||--o{ BOOKING_REQUESTS : "solicita"
    USERS  }|--|| ROLES: "tienen"
    
    GARAGES ||--o{ BOOKING_REQUESTS : "recibe solicitud de"
    GARAGES ||--o{ GARAGE_PHOTOS : "tiene"
    GARAGES ||--|| LOCATIONS : "reside"

    BOOKING_REQUESTS ||--|| BOOKINGS : "se convierte en"
    
    BOOKINGS ||--|| PAYMENTS : "tiene"
    BOOKINGS ||--o{ REVIEWS : "genera"
    USERS ||--o{ REVIEWS : "escribe"
    LOCATIONS }|--|| DISTRICTS: "esta en"